--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+body {background-color: grey;}
 .post {
     background-color: white;
     border: 20px ;
@@ -114,6 +115,7 @@ img {
     width: 80%;
     padding-left: 15px;
     font-family: Arial, Helvetica, sans-serif;
+    padding-bottom: 20px;
 
 }
 
